--- a/rhodo-feast.html
+++ b/rhodo-feast.html
@@ -42,8 +42,30 @@
         <div id = "pageContent" class = "">
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
+            <div id = "popupOverlay">&nbsp;</div>
 
             <div id = "productSection" class = "container-fluid">
+                <div id = "storePopup">
+                    <i class = "close-popup-overlay far fa-times-circle">
+                        &nbsp;
+                    </i>
+                    <div style = "text-align: center; font-weight: bold; color: #fff; font-size: 2rem; text-transform: uppercase; ">
+                        Available At:
+                    </div>
+                    <div class = "row">
+                        <a class = "col-6 store-link" href = "https://coralhubus.com/cart-2/rhodofeast/" target = "_blank" rel = "noopener norferrer">
+                            <div>
+                                <img alt = "Coral Hub" src = "images/test/test-4.png">
+                            </div>
+                        </a>
+                        <a class = "col-6 store-link" href = "https://reefshackllc.com/products/rhodofeast-premium-direct-feed-probiotic-4oz-nitrate-phosphate-remover?_pos=2&_sid=9b682b3ea&_ss=r" target = "_blank" rel = "noopener norferrer">
+                            <div>
+                                <img alt = "Reef Shack" src = "images/test/test-6.png">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
                 <div class = "row justify-content-center product-descript-container">
                     <div class = "col-md-6 rhodo-feast-col">
                         <!--<img src = "../Willow's Reef Website Mockup/images/png/compressed-product-images/rhodo-feast-prd.png" alt = "RhodoFeast">-->
@@ -56,9 +78,9 @@
                         This is a live probiotic. The bacteria in this product are cultured in a specific manner that makes them adapted to colonizing the animal gut. Their express purpose is to provide nutritional and immunological benefits to the fish, corals and other animals that consume them. 
                         <br><br>
 
-                        <a href = "/Willows-Reef-Mock-Up/stores-page.html" class = "link-button">
+                        <button class = "link-button">
                             See Stores
-                        </a>
+                        </button>
                     </div>
                 </div>
 
@@ -202,4 +224,5 @@
 
     <!-- Custom Site JS -->
     <script src = "js/site-js.js"></script>
+    <script src = "js/store-popup.js"></script>
 </html>
