--- a/coral-feast.html
+++ b/coral-feast.html
@@ -49,7 +49,7 @@
                     <i class = "close-popup-overlay far fa-times-circle">
                         &nbsp;
                     </i>
-                    <div style = "text-align: center; font-weight: bold; color: #fff; font-size: 2rem; text-transform: uppercase; ">
+                    <div class = "popup-header">
                         Available At:
                     </div>
                     <div class = "row">
@@ -194,7 +194,6 @@
         </div>
 
         <div id = "globalFooter">&nbsp;</div>
-
     </body>
 
     <!-- Custom Site JS -->
