--- a/community-images.html
+++ b/community-images.html
@@ -12,13 +12,9 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
         <!-- Bootstrap JS-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src ="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
-        <!-- Swiper JS & CSS for Mobile Carousels -->
-        <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
-        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
         
         <!-- Custom Site CSS -->
         <link rel = "stylesheet" href = "css/site-styling.css">
@@ -29,6 +25,22 @@
 
         <!-- Font Awesome script for Icons -->
         <script src = "https://kit.fontawesome.com/b8159c5824.js" crossorigin = "anonymous"></script>
+
+        <!-- PhotoSwipe CSS & JS -->
+        <link href = "./css/photoswipe/photoswipe.min.css" rel = "stylesheet">
+        <link href = "./css/photoswipe/default-skin.min.css" rel = "stylesheet">
+        <script src = "./js/photoswipe/photoswipe.min.js"></script>
+        <script src = "./js/photoswipe/photoswipe-ui-default.min.js"></script>
+
+        <!-- Nanogallery2 CSS & JS -->
+        <!--
+        <link href = "./css/nanogallery/nanogallery2.min.css" rel = "stylesheet">
+        <script src = "./js/nanogallery/jquery.nanogallery2.core.min.js"></script>
+        <script src = "./js/nanogallery/jquery.nanogallery2.data_flickr.min.js"></script>
+        <script src = "./js/nanogallery/jquery.nanogallery2.data_google3.min.js"></script>
+        <script src = "./js/nanogallery/jquery.nanogallery2.data_nano_photos_provider2.min.js"></script>
+        <script src = "./js/nanogallery/jquery.nanogallery2.min.js"></script>
+        -->
     </head>
 
     <body>
@@ -37,7 +49,7 @@
             <span class = "sr-only">Back to Top</span>
         </button>
 
-        <div id = "globalHeader">&nbsp;</div>
+        <!--<div id = "globalHeader">&nbsp;</div>-->
 
         <div id = "pageContent" class = "">
             <!-- Overlay for Mobile Dropdown -->
@@ -46,6 +58,7 @@
             <div id = "mediaSection" class = "container-fluid">
                 <div class = "row justify-content-center mt-4">
                     <h2 class = "section-header">Community Image Gallery</h2>
+
                     <div class = "text-center mb-4">
                         Here at Willow's Reef, we love our fellow aquarists - and we certainly love their tanks!<br>
                         Send us your tank pictures and get featured on our website!<br><br>
@@ -55,18 +68,98 @@
                             <span class = "sr-only">Willow's Reef Facebook Link</span>
                         </a>
                     </div>
-                    <div style = "text-align: center; padding: 3rem; background: rgba(0,0,0,.8); color: #fff; margin: 0 auto; margin-top: 2rem; max-width: 100%; text-transform: uppercase;">
-                        This section will include a cool gallery with the images lined up. When a user clicks an image, it will expand
-                        into an image viewer on the page. 
-                        <br><br>
-                        Something like this: 
-                        <a style = "color: #fff; text-decoration: none; border: .1rem solid #fff; padding: .25rem; border-radius: 30rem; " href = "https://photoswipe.com/" target = "_blank">PhotoSwipe</a>
+
+                    <!-- PhotoSwipe Image Gallery - START -->
+                    <style>
+                        .customer-gallery
+                        {
+                            width: 100%;
+                            height: auto;
+                        }
+                        .customer-gallery figure
+                        {
+                            display: none;
+                        }
+                        .customer-gallery a
+                        {
+                            height: auto;
+                            line-height: 0;
+                            text-decoration: none;
+                            caret-color: transparent;
+                        }
+                        .customer-img-container
+                        {
+                            width: 100%;
+                            max-width: 20rem;
+                            height: 13rem;
+                            background-size: cover;
+                            background-position: center;
+                            border: .1rem solid #010048;
+                            border-radius: 1rem;
+                        }
+                    </style>
+                    <div id = "customerImgGallery" class = "customer-gallery row">
+                        <a href = "images/jpg/customer-images/customer-img-1.jpg" data-size = "768x432" data-med = "images/jpg/customer-images/customer-img-1.jpg" data-med-size = "768x432" data-author = "Customer Name Here" class = "img-main col-md-6 col-lg-4 mt-3">
+                            <div class = "customer-img-container" style = "background-image: url('images/jpg/customer-images/customer-img-1.jpg');">
+                                &nbsp;
+                            </div>
+                            <figure>[Description of image]</figure>
+                        </a>
+                        <a href = "images/jpg/customer-images/customer-img-2.jpg" data-size = "768x432" data-med = "images/jpg/customer-images/customer-img-2.jpg" data-med-size = "768x432" data-author = "Customer Name Here" class = "col-md-6 col-lg-4 mt-3">
+                            <div class = "customer-img-container" style = "background-image: url('images/jpg/customer-images/customer-img-2.jpg');">
+                                &nbsp;
+                            </div>                                
+                            <figure>[Description of image]</figure>
+                        </a>
+                        <a href = "images/jpg/customer-images/customer-img-3.jpg" data-size = "768x432" data-med = "images/jpg/customer-images/customer-img-3.jpg" data-med-size = "768x432" data-author = "Customer Name Here" class = "col-md-6 col-lg-4 mt-3">
+                            <div class = "customer-img-container" style = "background-image: url('images/jpg/customer-images/customer-img-3.jpg');">
+                                &nbsp;
+                            </div>
+                            <figure>[Description of image]</figure>
+                        </a>
                     </div>
+
+                    <div id = "gallery" class = "pswp" tabindex = "-1" role = "dialog" aria-hidden = "true">
+                        <div class = "pswp__bg"></div>
+                        <div class = "pswp__scroll-wrap">
+                            <div class = "pswp__container">
+                                <div class = "pswp__item"></div>
+                                <div class = "pswp__item"></div>
+                                <div class = "pswp__item"></div>
+                            </div>
+                            <div class = "pswp__ui pswp__ui--hidden">
+                                <div class = "pswp__top-bar">
+                                    <div class = "pswp__counter"></div>
+                                    <button class = "pswp__button pswp__button--close" title="Close (Esc)"></button>
+                                    <button class = "pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+                                    <button class = "pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+                                    <div class = "pswp__preloader">
+                                        <div class = "pswp__preloader__icn">
+                                            <div class = "pswp__preloader__cut">
+                                                <div class = "pswp__preloader__donut"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- <div class="pswp__loading-indicator"><div class="pswp__loading-indicator__line"></div></div> -->
+                                <button class = "pswp__button pswp__button--arrow--left" title = "Previous (arrow left)"></button>
+                                <button class = "pswp__button pswp__button--arrow--right" title = "Next (arrow right)"></button>
+                                <div class = "pswp__caption">
+                                    <div class = "pswp__caption__center"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                
+    
+                    <!-- JS to Initialize PhotoSwipe Image Gallery -->
+                    <script src = "js/photoswipe/gallery-init.js"></script>
+
+                    <!-- PhotoSwipe Image Gallery - END -->
                 </div>
             </div>
         </div>
 
-        <div id = "globalFooter">&nbsp;</div>
+        <!--<div id = "globalFooter">&nbsp;</div>-->
 
     </body>
 
