--- a/community-images.html
+++ b/community-images.html
@@ -49,7 +49,7 @@
             <span class = "sr-only">Back to Top</span>
         </button>
 
-        <!--<div id = "globalHeader">&nbsp;</div>-->
+        <div id = "globalHeader">&nbsp;</div>
 
         <div id = "pageContent" class = "">
             <!-- Overlay for Mobile Dropdown -->
@@ -159,7 +159,7 @@
             </div>
         </div>
 
-        <!--<div id = "globalFooter">&nbsp;</div>-->
+        <div id = "globalFooter">&nbsp;</div>
 
     </body>
 
