--- a/community-images.html
+++ b/community-images.html
@@ -96,9 +96,10 @@
                             background-position: center;
                             border: .1rem solid #010048;
                             border-radius: 1rem;
+                            margin: 0 auto;
                         }
                     </style>
-                    <div id = "customerImgGallery" class = "customer-gallery row justify-content-center">
+                    <div id = "customerImgGallery" class = "customer-gallery row">
                         <a href = "images/jpg/customer-images/customer-img-1.jpg" data-size = "768x432" data-med = "images/jpg/customer-images/customer-img-1.jpg" data-med-size = "768x432" data-author = "Customer Name Here" class = "img-main col-md-6 col-lg-4 mt-3">
                             <div class = "customer-img-container" style = "background-image: url('images/jpg/customer-images/customer-img-1.jpg');">
                                 &nbsp;
