--- a/community-images.html
+++ b/community-images.html
@@ -78,7 +78,13 @@
                         }
                         .customer-gallery figure
                         {
-                            display: none;
+                            color: #fff;
+                            width: auto;
+                            background: rgba(0,0,0,.5);
+                            position: relative;
+                            top: -2rem;
+                            padding: 1rem;
+                            max-width: 25rem;
                         }
                         .customer-gallery a
                         {
@@ -94,8 +100,6 @@
                             height: 15rem;
                             background-size: cover;
                             background-position: center;
-                            border: .1rem solid #010048;
-                            border-radius: 1rem;
                             margin: 0 auto;
                         }
                     </style>
