--- a/community-images.html
+++ b/community-images.html
@@ -101,6 +101,7 @@
                             background-size: cover;
                             background-position: center;
                             margin: 0 auto;
+                            box-shadow: 1px 1px 8px -4px #000;
                         }
                     </style>
                     <div id = "customerImgGallery" class = "customer-gallery row">
