--- a/community-images.html
+++ b/community-images.html
@@ -85,6 +85,7 @@
                             top: -2rem;
                             padding: 1rem;
                             max-width: 25rem;
+                            margin: 0 auto;
                         }
                         .customer-gallery a
                         {
