--- a/community-images.html
+++ b/community-images.html
@@ -93,6 +93,7 @@
                             line-height: 0;
                             text-decoration: none;
                             caret-color: transparent;
+                            cursor: zoom-in;
                         }
                         .customer-img-container
                         {
@@ -103,6 +104,10 @@
                             background-position: center;
                             margin: 0 auto;
                             box-shadow: 1px 1px 8px -4px #000;
+                        }
+                        .customer-gallery a:hover .customer-img-container
+                        {
+                            opacity: .8;
                         }
                     </style>
                     <div id = "customerImgGallery" class = "customer-gallery row">
