--- a/community-images.html
+++ b/community-images.html
@@ -102,6 +102,7 @@
                             height: 15rem;
                             background-size: cover;
                             background-position: center;
+                            background-color: #444;
                             margin: 0 auto;
                             box-shadow: 1px 1px 8px -4px #000;
                         }
