--- a/community-images.html
+++ b/community-images.html
@@ -106,6 +106,10 @@
                             margin: 0 auto;
                             box-shadow: 1px 1px 8px -4px #000;
                         }
+                        .customer-gallery a:hover
+                        {
+                            transform: scale(1.05);
+                        }
                         .customer-gallery a:hover .customer-img-container
                         {
                             opacity: .8;
