--- a/community-images.html
+++ b/community-images.html
@@ -116,19 +116,19 @@
                         }
                     </style>
                     <div id = "customerImgGallery" class = "customer-gallery row">
-                        <a href = "images/jpg/customer-images/customer-img-1.jpg" data-size = "768x432" data-med = "images/jpg/customer-images/customer-img-1.jpg" data-med-size = "768x432" data-author = "Customer Name Here" class = "img-main col-md-6 col-lg-4 mt-3">
+                        <a href = "images/jpg/customer-images/customer-img-1.jpg" data-size = "768x432" data-med = "images/jpg/customer-images/customer-img-1.jpg" data-med-size = "768x432" data-author = "Customer Name Here" class = "img-main col-md-6 col-lg-4 mt-3" data-aos = "zoom-in" data-aos-once = "true">
                             <div class = "customer-img-container" style = "background-image: url('images/jpg/customer-images/customer-img-1.jpg');">
                                 &nbsp;
                             </div>
                             <figure>[Description of image]</figure>
                         </a>
-                        <a href = "images/jpg/customer-images/customer-img-2.jpg" data-size = "768x432" data-med = "images/jpg/customer-images/customer-img-2.jpg" data-med-size = "768x432" data-author = "Customer Name Here" class = "col-md-6 col-lg-4 mt-3">
+                        <a href = "images/jpg/customer-images/customer-img-2.jpg" data-size = "768x432" data-med = "images/jpg/customer-images/customer-img-2.jpg" data-med-size = "768x432" data-author = "Customer Name Here" class = "col-md-6 col-lg-4 mt-3" data-aos = "zoom-in" data-aos-once = "true">
                             <div class = "customer-img-container" style = "background-image: url('images/jpg/customer-images/customer-img-2.jpg');">
                                 &nbsp;
                             </div>                                
                             <figure>[Description of image]</figure>
                         </a>
-                        <a href = "images/jpg/customer-images/customer-img-3.jpg" data-size = "768x432" data-med = "images/jpg/customer-images/customer-img-3.jpg" data-med-size = "768x432" data-author = "Customer Name Here" class = "col-md-6 col-lg-4 mt-3">
+                        <a href = "images/jpg/customer-images/customer-img-3.jpg" data-size = "768x432" data-med = "images/jpg/customer-images/customer-img-3.jpg" data-med-size = "768x432" data-author = "Customer Name Here" class = "col-md-6 col-lg-4 mt-3" data-aos = "zoom-in" data-aos-once = "true">
                             <div class = "customer-img-container" style = "background-image: url('images/jpg/customer-images/customer-img-3.jpg');">
                                 &nbsp;
                             </div>
