--- a/blog.html
+++ b/blog.html
@@ -43,10 +43,92 @@
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
-            <div id = "mediaSection" class = "container-fluid">
+            <div id = "blogSection" class = "container-fluid">
                 <div class = "row justify-content-center mt-4">
-                    <h2 class = "section-header">Willow's Reef Blog Postings</h2>
+                    <h2 class = "section-header">Blog Posts</h2>
                     
+                    <div class = "row justify-content-center">
+                        <div class = "blog-post-container col-lg d-flex flex-column">
+                            <div class = "blog-post-img" id = "">
+                                <img alt = "placeholder" src = "images/jpg/blog-placeholder-1.jpg">
+                            </div>
+                            <div class = "blog-post-info">
+                                <div class = "blog-post-name">
+                                    <a href = "/Willows-Reef-Mock-Up/blog-post-example.html">
+                                        Blog Post 1
+                                    </a>
+                                </div>
+                                This is an example of a blog post listing, with a placeholder image,
+                                title, and description.
+                                <div class = "fw-bold mt-2">
+                                    <span>
+                                        Posted on November 11, 2021
+                                    </span>
+                                    <br>
+                                    <span>
+                                        Author: Sergio P.
+                                    </span>
+                                </div>
+                            </div>
+                            <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/blog-post-example.html">
+                                Read Article
+                            </a>
+                        </div>
+                        <div class = "blog-post-container col-lg offset-lg-1 d-flex flex-column">
+                            <div class = "blog-post-img" id = "">
+                                <img alt = "placeholder" src = "images/jpg/blog-placeholder-2.jpg">
+                            </div>
+                            <div class = "blog-post-info">
+                                <div class = "blog-post-name">
+                                    <a href = "/Willows-Reef-Mock-Up/blog-post-example.html">
+                                        Blog Post 2
+                                    </a>
+                                </div>
+                                This is an example of a blog post listing, with a placeholder image,
+                                title, and description.
+                                <div class = "fw-bold mt-2">
+                                    <span>
+                                        Posted on November 3, 2021
+                                    </span>
+                                    <br>
+                                    <span>
+                                        Author: Gary Z.
+                                    </span>
+                                </div>
+                            </div>
+                            <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/blog-post-example.html">
+                                Read Article
+                            </a>
+                        </div>
+                        <div class = "blog-post-container col-lg offset-lg-1 d-flex flex-column">
+                            <div class = "blog-post-img" id = "rhodoFeast">
+                                <img alt = "placeholder" src = "images/jpg/blog-placeholder-3.jpg">
+                            </div>
+                            <div class = "blog-post-info">
+                                <div class = "blog-post-name">
+                                    <a href = "/Willows-Reef-Mock-Up/blog-post-example.html">
+                                        Blog Post 3
+                                    </a>
+                                </div>
+                                This is an example of a blog post listing, with a placeholder image,
+                                title, and description.
+                                <div class = "fw-bold mt-2">
+                                    <span>
+                                        Posted on October 28, 2021
+                                    </span>
+                                    <br>
+                                    <span>
+                                        Author: John J.
+                                    </span>
+                                </div>
+                            </div>
+                            <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/blog-post-example.html">
+                                Read Article
+                            </a>
+                        </div>
+                    </div>
+
+                    <!--
                     <div style = "text-align: center; padding: 3rem; background: rgba(0,0,0,.8); color: #fff; margin: 0 auto; margin-top: 2rem; max-width: 100%; text-transform: uppercase;">
                         This section will include various little blog postings, which link out to the actual full blog posts.<br><br>
                         The little sections will show the blog article title, the author's name, and the date it was written.<br><br>
@@ -54,6 +136,7 @@
                         common for blog articles. These blog articles can include whatever the blog desires, but will normally be
                         text heavy and will have a header image.
                     </div>
+                    -->
                 </div>
             </div>
         </div>
