--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
                     <h2 class = "section-header">Blog Posts</h2>
                     
                     <div class = "row justify-content-center">
-                        <div class = "blog-post-container col-lg d-flex flex-column">
+                        <div class = "blog-post-container col-lg d-flex flex-column" data-aos = "zoom-in" data-aos-once = "true">
                             <div class = "blog-post-img" id = "">
                                 <img alt = "placeholder" src = "images/jpg/blog-placeholder-1.jpg">
                             </div>
@@ -74,7 +74,7 @@
                                 Read Article
                             </a>
                         </div>
-                        <div class = "blog-post-container col-lg offset-lg-1 d-flex flex-column">
+                        <div class = "blog-post-container col-lg offset-lg-1 d-flex flex-column" data-aos = "zoom-in" data-aos-once = "true">
                             <div class = "blog-post-img" id = "">
                                 <img alt = "placeholder" src = "images/jpg/blog-placeholder-2.jpg">
                             </div>
@@ -100,7 +100,7 @@
                                 Read Article
                             </a>
                         </div>
-                        <div class = "blog-post-container col-lg offset-lg-1 d-flex flex-column">
+                        <div class = "blog-post-container col-lg offset-lg-1 d-flex flex-column" data-aos = "zoom-in" data-aos-once = "true">
                             <div class = "blog-post-img" id = "rhodoFeast">
                                 <img alt = "placeholder" src = "images/jpg/blog-placeholder-3.jpg">
                             </div>
