--- a/blog-post-example.html
+++ b/blog-post-example.html
@@ -46,7 +46,7 @@
             <div id = "blogSection" class = "container-fluid">
                 <div class = "row justify-content-center mt-4">
                     
-                    <img class = "blog-top-img" alt = "placeholder" src = "images/jpg/blog-placeholder-1.jpg" style = "width: 100%; max-width: 20rem; ">
+                    <img class = "blog-top-img" alt = "placeholder" src = "images/jpg/placeholder-blogpost-img.jpg" style = "max-width: 60%;">
                     
                     <div class = "blog-content" style = "padding: 5%;">
                         <h2 class = "section-header" style = "text-align: left;">Example Blog Post Title</h2>
