--- a/blog-post-example.html
+++ b/blog-post-example.html
@@ -47,8 +47,8 @@
                 <!--      
                 <img class = "blog-top-img" alt = "placeholder" src = "images/jpg/placeholder-blogpost-img.jpg" style = "max-width: 60%;">
                 -->       
-                <div class = "blog-content" style = "padding: 5%;">
-                    <h2 class = "section-header" style = "text-align: left;">Example Blog Post Title</h2>
+                <div class = "blog-content" style = "padding: 0 15%;">
+                    <h2 class = "section-header" style = "text-align: left;">Example Blog Post Title Providing Detail/Context For Article</h2>
                     <div class = "auth-date-info" style = "display: flex; align-items: center; margin-bottom: 1rem;">
                         <img class = "author-img" alt = "Author Photo" src = "images/jpg/author-1.jpg" style = "height: 5rem; border-radius: 10rem;">
                         <div class = "author-details" style = "margin: 0 1rem; font-weight: bold;">
@@ -56,7 +56,9 @@
                             <div>November 11, 2021</div>
                         </div>
                     </div>
-
+                    <img class = "blog-top-img" alt = "placeholder" src = "images/jpg/placeholder-blogpost-img.jpg" style = "max-width: 100%; border: 0.1rem solid #03002e;">
+                    <div class = "img-src" style = "color: #555;">Image: NMA</div>
+                    <br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu vitae elementum curabitur vitae nunc sed velit dignissim. Sodales neque sodales ut etiam sit amet nisl purus. Enim facilisis gravida neque convallis a. Quis commodo odio aenean sed. Natoque penatibus et magnis dis parturient montes nascetur. Venenatis cras sed felis eget velit aliquet sagittis id. Et molestie ac feugiat sed lectus vestibulum. Turpis in eu mi bibendum neque. Lobortis scelerisque fermentum dui faucibus in.
                     <br><br>
                     In eu mi bibendum neque egestas congue quisque egestas diam. Massa sapien faucibus et molestie ac. Justo laoreet sit amet cursus sit amet dictum sit. Cursus in hac habitasse platea dictumst quisque sagittis purus sit. Pretium quam vulputate dignissim suspendisse in est. Semper auctor neque vitae tempus. Sem integer vitae justo eget. Convallis a cras semper auctor neque vitae tempus. Aliquet nibh praesent tristique magna sit. Pellentesque habitant morbi tristique senectus et. Ac tortor dignissim convallis aenean et tortor at. Nunc pulvinar sapien et ligula ullamcorper. Nulla facilisi morbi tempus iaculis urna id volutpat lacus.
