--- a/blog-post-example.html
+++ b/blog-post-example.html
@@ -47,7 +47,7 @@
                 <!--      
                 <img class = "blog-top-img" alt = "placeholder" src = "images/jpg/placeholder-blogpost-img.jpg" style = "max-width: 60%;">
                 -->       
-                <div class = "blog-content" style = "padding: 0 15%;">
+                <div class = "blog-content" style = "padding: 5% 15% 0 15%;">
                     <h2 class = "section-header" style = "text-align: left;">Example Blog Post Title Providing Detail/Context For Article</h2>
                     <div class = "auth-date-info" style = "display: flex; align-items: center; margin-bottom: 1rem;">
                         <img class = "author-img" alt = "Author Photo" src = "images/jpg/author-1.jpg" style = "height: 5rem; border-radius: 10rem;">
