--- a/blog-post-example.html
+++ b/blog-post-example.html
@@ -49,11 +49,20 @@
                 -->       
                 <div class = "blog-content" style = "padding: 5% 15% 0 15%;">
                     <h2 class = "section-header" style = "text-align: left;">Example Blog Post Title Providing Detail/Context For Article</h2>
-                    <div class = "auth-date-info" style = "display: flex; align-items: center; margin-bottom: 1rem;">
-                        <img class = "author-img" alt = "Author Photo" src = "images/jpg/author-1.jpg" style = "height: 5rem; border-radius: 10rem;">
-                        <div class = "author-details" style = "margin: 0 1rem; font-weight: bold;">
-                            <div>Sergio P.</div>
-                            <div>November 11, 2021</div>
+                    <div class = "blog-post-details" style = "margin-bottom: 1rem; display: flex; align-items: center; justify-content: space-between;">
+                        <div class = "auth-date-info" style = "display: flex; align-items: center;">
+                            <img class = "author-img" alt = "Author Photo" src = "images/jpg/author-1.jpg" style = "height: 5rem; border-radius: 10rem;">
+                            <div class = "author-details" style = "margin: 0 1rem; font-weight: bold;">
+                                <div>Sergio P.</div>
+                                <div>November 11, 2021</div>
+                            </div>
+                        </div>
+                        <div> 
+                            <a style = "text-decoration: none;" href = "https://www.facebook.com/sharer/sharer.php?u=https%3A//spacheco64.github.io/Willows-Reef-Mock-Up/blog-post-example.html" target = "_blank" rel = "noopener norferrer">
+                                Share on 
+                                <i class = "fab fa-facebook" aria-hidden = "true"></i>
+                                <span class="sr-only">Facebook</span>
+                            </a>
                         </div>
                     </div>
                     <img class = "blog-top-img" alt = "placeholder" src = "images/jpg/placeholder-blogpost-img.jpg" style = "max-width: 100%; border: 0.1rem solid #03002e;">
