--- a/blog-post-example.html
+++ b/blog-post-example.html
@@ -57,6 +57,7 @@
                                 <div>November 11, 2021</div>
                             </div>
                         </div>
+                        <div class = "w-100">&nbsp;</div>
                         <div> 
                             <a style = "text-decoration: none;" href = "https://www.facebook.com/sharer/sharer.php?u=https%3A//spacheco64.github.io/Willows-Reef-Mock-Up/blog-post-example.html" target = "_blank" rel = "noopener norferrer">
                                 Share on 
