--- a/blog-post-example.html
+++ b/blog-post-example.html
@@ -66,7 +66,7 @@
                             </a>
                         </div>
                     </div>
-                    <img class = "blog-top-img" alt = "placeholder" src = "images/jpg/placeholder-blogpost-img.jpg" style = "max-width: 100%; border: 2px solid #03002e;">
+                    <img class = "blog-top-img" alt = "placeholder" src = "images/jpg/placeholder-blogpost-img.jpg" style = "max-width: 100%;">
                     <div class = "img-src" style = "color: #555;">Image: NMA</div>
                     <br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu vitae elementum curabitur vitae nunc sed velit dignissim. Sodales neque sodales ut etiam sit amet nisl purus. Enim facilisis gravida neque convallis a. Quis commodo odio aenean sed. Natoque penatibus et magnis dis parturient montes nascetur. Venenatis cras sed felis eget velit aliquet sagittis id. Et molestie ac feugiat sed lectus vestibulum. Turpis in eu mi bibendum neque. Lobortis scelerisque fermentum dui faucibus in.
