--- a/blog-post-example.html
+++ b/blog-post-example.html
@@ -47,7 +47,7 @@
                 <!--      
                 <img class = "blog-top-img" alt = "placeholder" src = "images/jpg/placeholder-blogpost-img.jpg" style = "max-width: 60%;">
                 -->       
-                <div class = "blog-content" style = "padding: 5% 10% 0 10%;">
+                <div class = "blog-content">
                     <h2 class = "section-header" style = "text-align: left;">Example Blog Post Title Providing Detail &amp; Context For Article</h2>
                     <div class = "blog-post-details" style = "margin-bottom: 1rem; display: flex; align-items: center; justify-content: space-between;">
                         <div class = "auth-date-info" style = "display: flex; align-items: center;">
