--- a/blog-post-example.html
+++ b/blog-post-example.html
@@ -49,25 +49,25 @@
                 -->       
                 <div class = "blog-content">
                     <h2 class = "section-header" style = "text-align: left;">Example Blog Post Title Providing Detail &amp; Context For Article</h2>
-                    <div class = "blog-post-details" style = "margin-bottom: 1rem; display: flex; align-items: center; justify-content: space-between;">
-                        <div class = "auth-date-info" style = "display: flex; align-items: center;">
-                            <img class = "author-img" alt = "Author Photo" src = "images/jpg/author-1.jpg" style = "height: 5rem; border-radius: 10rem;">
-                            <div class = "author-details" style = "margin: 0 1rem; font-weight: bold;">
+                    <div class = "blog-post-details">
+                        <div class = "auth-date-info">
+                            <img class = "author-img" alt = "Author Photo" src = "images/jpg/author-1.jpg">
+                            <div class = "author-details fw-bold">
                                 <div>Sergio P.</div>
                                 <div>November 11, 2021</div>
                             </div>
                         </div>
                         <div class = "w-100">&nbsp;</div>
                         <div> 
-                            <a style = "text-decoration: none;" href = "https://www.facebook.com/sharer/sharer.php?u=https%3A//spacheco64.github.io/Willows-Reef-Mock-Up/blog-post-example.html" target = "_blank" rel = "noopener norferrer">
+                            <a href = "https://www.facebook.com/sharer/sharer.php?u=https%3A//spacheco64.github.io/Willows-Reef-Mock-Up/blog-post-example.html" target = "_blank" rel = "noopener norferrer">
                                 Share on 
                                 <i class = "fab fa-facebook" aria-hidden = "true"></i>
                                 <span class="sr-only">Facebook</span>
                             </a>
                         </div>
                     </div>
-                    <img class = "blog-top-img" alt = "placeholder" src = "images/jpg/placeholder-blogpost-img.jpg" style = "max-width: 100%;">
-                    <div class = "img-src" style = "color: #555;">Image Source: National Marine Aquarium</div>
+                    <img class = "blog-top-img" alt = "placeholder" src = "images/jpg/placeholder-blogpost-img.jpg">
+                    <div class = "img-src">Image Source: National Marine Aquarium</div>
                     <br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu vitae elementum curabitur vitae nunc sed velit dignissim. Sodales neque sodales ut etiam sit amet nisl purus. Enim facilisis gravida neque convallis a. Quis commodo odio aenean sed. Natoque penatibus et magnis dis parturient montes nascetur. Venenatis cras sed felis eget velit aliquet sagittis id. Et molestie ac feugiat sed lectus vestibulum. Turpis in eu mi bibendum neque. Lobortis scelerisque fermentum dui faucibus in.
                     <br><br>
@@ -84,7 +84,7 @@
                     Purus in mollis nunc sed id semper risus. Viverra nibh cras pulvinar mattis. Proin sagittis nisl rhoncus mattis rhoncus urna. Id diam maecenas ultricies mi eget mauris pharetra. Aliquam vestibulum morbi blandit cursus. Id neque aliquam vestibulum morbi. Praesent elementum facilisis leo vel fringilla. Sapien nec sagittis aliquam malesuada. Vitae et leo duis ut diam quam nulla porttitor. Auctor neque vitae tempus quam pellentesque nec. Ut lectus arcu bibendum at varius vel pharetra vel. Gravida in fermentum et sollicitudin ac orci phasellus. Vulputate enim nulla aliquet porttitor lacus luctus. Massa tempor nec feugiat nisl pretium.
                 
                 
-                    <div class = "final-blurb" style = "margin: 2rem 0; font-style: italic; color: #555; border-top: .05rem solid; padding-top: 2rem;">
+                    <div class = "final-blurb">
                         Post was originally written by Sergio Pacheco and published November, 2021
                     </div>
                 </div>
