--- a/feeding-vids.html
+++ b/feeding-vids.html
@@ -58,7 +58,7 @@
                     for more quality content!
                 </div>
 
-                <iframe id = "videoPlayer" width = "900" height = "506" src = "https://www.youtube.com/embed/0-DltKVsRrA?list=PLBX8Md3S4qloWrm0C82lGXannR7b3WUmc" title = "YouTube video player" frameborder = "0" allow = "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe id = "videoPlayer" width = "900" height = "506" src = "https://www.youtube.com/embed/0-DltKVsRrA?list=PLBX8Md3S4qloWrm0C82lGXannR7b3WUmc" title = "YouTube video player" frameborder = "0" allow = "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen data-aos = "zoom-in" data-aos-once = "true"></iframe>
             
                 <!--
                 <div style = "text-align: center; padding: 3rem; background: rgba(0,0,0,.8); color: #fff; width: 900px; margin: 0 auto; margin-top: 2rem; max-width: 100%; text-transform: uppercase;">
