--- a/confirmation-page.html
+++ b/confirmation-page.html
@@ -43,11 +43,13 @@
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
-            <div id = "confirmationSection" class = "text-center">
-                <img alt = "Willow's Reef Logo" src = "images/png/willows-reef-icon.png" style = "width: 8rem;">
-                <div>
-                    Thank you, we have received your message!<br>
-                    We will get back to you ASAP!
+            <div id = "confirmationSection" class = "text-center" style = "padding: 5%;">
+                <div class = "confirmation-container" style = "padding: 0 5%;">
+                    <img alt = "Willow's Reef Logo" src = "images/png/willows-reef-icon.png" style = "width: 8rem;">
+                    <div>
+                        Thank you, we have received your message!<br>
+                        We will get back to you ASAP!
+                    </div>
                 </div>
             </div>
         </div>
