--- a/confirmation-page.html
+++ b/confirmation-page.html
@@ -44,7 +44,7 @@
             <div id = "screenOverlay">&nbsp;</div>
 
             <div id = "confirmationSection" class = "text-center" style = "padding: 5%;">
-                <div class = "confirmation-container" style = "padding: 0 5%;">
+                <div class = "confirmation-container" style = "padding: 5rem 0 1rem 0;">
                     <img alt = "Willow's Reef Logo" src = "images/png/willows-reef-icon.png" style = "width: 8rem;">
                     <div>
                         Thank you, we have received your message!<br>
