--- a/confirmation-page.html
+++ b/confirmation-page.html
@@ -50,6 +50,23 @@
                         Thank you, we have received your message!<br>
                         We will get back to you ASAP!
                     </div>
+
+                    <div class = "row">
+                        <div class = "col-md-6 justify-content-center d-flex mt-3">
+                            <div class = "confirmation-page-box" style = "text-align: center; background: #e3ecf1; padding: 2rem; width: 85%;">
+                                Want to know more about us?<br>
+                                Check out our About Us page!<br><br>
+                                <a class = "link-button" href = "/about-page.html">About Us</a>
+                            </div>
+                        </div>
+                        <div class = "col-md-6 justify-content-center d-flex mt-3">
+                            <div class = "confirmation-page-box" style = "text-align: center; background: #e3ecf1; padding: 2rem; width: 85%;">
+                                Want to know more about our products?<br>
+                                Check out our Products page!<br><br>
+                                <a class = "link-button" href = "/products-page.html">Products</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
