--- a/confirmation-page.html
+++ b/confirmation-page.html
@@ -32,6 +32,10 @@
     </head>
 
     <body>
+        <style>
+            #contactSection{ display: none; }
+        </style>
+        
         <button onclick = "topFunction()" id = "scrollToTopBtn">
             <i class = "fas fa-chevron-up"></i>
             <span class = "sr-only">Back to Top</span>
