--- a/confirmation-page.html
+++ b/confirmation-page.html
@@ -60,14 +60,14 @@
                             <div class = "confirmation-page-box" style = "text-align: center; background: #e3ecf1; padding: 2rem; width: 75%;">
                                 Want to know more about us?<br>
                                 Check out our About Us page!<br><br>
-                                <a class = "link-button" href = "/about-page.html">About Us</a>
+                                <a class = "link-button" href = "/Willows-Reef-Mock-Up/about-page.html">About Us</a>
                             </div>
                         </div>
                         <div class = "col-md-6 justify-content-center d-flex mt-3">
                             <div class = "confirmation-page-box" style = "text-align: center; background: #e3ecf1; padding: 2rem; width: 75%;">
                                 Want to know more about our products?<br>
                                 Check out our Products page!<br><br>
-                                <a class = "link-button" href = "/products-page.html">Products</a>
+                                <a class = "link-button" href = "/Willows-Reef-Mock-Up/products-page.html">Products</a>
                             </div>
                         </div>
                     </div>
