--- a/confirmation-page.html
+++ b/confirmation-page.html
@@ -50,7 +50,7 @@
             <div id = "confirmationSection" class = "text-center" style = "padding: 5%;">
                 <div class = "confirmation-container" style = "padding: 5rem 0 1rem 0;">
                     <img alt = "Willow's Reef Logo" src = "images/png/willows-reef-icon.png" style = "width: 8rem;">
-                    <div class = "fw-bold">
+                    <div class = "fw-bold m-3">
                         Thank you, we have received your message!<br>
                         We will get back to you ASAP!
                     </div>
