--- a/confirmation-page.html
+++ b/confirmation-page.html
@@ -33,7 +33,7 @@
 
     <body>
         <style>
-            #contactSection{ display: none; }
+            #contactSection, .contact-us-link{ display: none; }
         </style>
         
         <button onclick = "topFunction()" id = "scrollToTopBtn">
