--- a/global-header.html
+++ b/global-header.html
@@ -78,7 +78,7 @@
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/about-page.html"> About Us </a>
                             </li>
                             <li class = "nav-item">
-                                <a class = "nav-link" href = "#contactAnch"> Contact Us </a>
+                                <a class = "nav-link contact-us-link" href = "#contactAnch"> Contact Us </a>
                             </li>
                         </ul>
                         <div class = "social-line">
@@ -150,7 +150,7 @@
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/about-page.html"> About Us </a>
                             </li>
                             <li class = "nav-item">
-                                <a class = "nav-link" href = "#contactAnch"> Contact Us </a>
+                                <a class = "nav-link contact-us-link" href = "#contactAnch"> Contact Us </a>
                             </li>
                         </ul>
                     </div>
