--- a/confirmation-page.html
+++ b/confirmation-page.html
@@ -47,8 +47,8 @@
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
-            <div id = "confirmationSection" class = "text-center" style = "padding: 5%;">
-                <div class = "confirmation-container" style = "padding: 3rem 0 5rem 0;">
+            <div id = "confirmationSection" class = "text-center">
+                <div class = "confirmation-container">
                     <img alt = "Willow's Reef Logo" src = "images/png/willows-reef-icon.png" style = "width: 8rem;">
                     <div class = "fw-bold m-3">
                         Thank you, we have received your message!<br>
@@ -57,14 +57,14 @@
 
                     <div class = "row">
                         <div class = "col-md-6 justify-content-center d-flex mt-3">
-                            <div class = "confirmation-page-box" style = "text-align: center; background: #e3ecf1; padding: 2rem; width: 75%;">
+                            <div class = "confirmation-page-box">
                                 Want to know more about us?<br>
                                 Check out our About Us page!<br><br>
                                 <a class = "link-button" href = "/Willows-Reef-Mock-Up/about-page.html">About Us</a>
                             </div>
                         </div>
                         <div class = "col-md-6 justify-content-center d-flex mt-3">
-                            <div class = "confirmation-page-box" style = "text-align: center; background: #e3ecf1; padding: 2rem; width: 75%;">
+                            <div class = "confirmation-page-box">
                                 Want to know more about our products?<br>
                                 Check out our Products page!<br><br>
                                 <a class = "link-button" href = "/Willows-Reef-Mock-Up/products-page.html">Products</a>
